Improved mobile usability by updating z-index of hover effect to fix scrolling issue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -162,6 +162,7 @@ section {
     justify-content: center;
     transform: translateY(-50%);
     .hover-effect{
+        z-index: -2;
         color: #FFFFFF;
         opacity: 0;
         //padding: 1rem;
